reorganization and formatting
Signed-off-by: Nakul Manchanda <nakul.manchanda@ibm.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/mvd.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/mvd.component.html
@@ -11,9 +11,9 @@
 -->
 
 <div class="desktop">
-  <rs-com-login >
+  <rs-com-login>
     <!-- Desktop contents restricted by the login screen -->
-    <rs-com-mvd-desktop tabindex="-1" ></rs-com-mvd-desktop>
+    <rs-com-mvd-desktop></rs-com-mvd-desktop>
   </rs-com-login>
 </div>
 
