--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -68,7 +68,8 @@
   position: absolute;
   bottom: 70px;
   right: 0;
-  border-top-left-radius: 10px;
+  border-radius: 10px;
+  right: 5px;
   background: #dde8f1;
   padding: 10px 15px;
   z-index: 7;
@@ -118,15 +119,12 @@
 .notifications {
   width: 335px;
   height: 350px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-radius: 10px;
   background: #dde8f1;
   overflow-y: auto;
-  margin-top: -440px;
-  margin-right: 100px;
-  float: right;
+  position: absolute;
+  right: 5px;
+  bottom: 46px;
 }
 
 .caret-up {
