--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
@@ -16,7 +16,8 @@
                                 (mouseenter)="onMouseEnterInstanceView($event)"
                                 (mouseleave)="onMouseLeaveInstanceView($event)"></zowe-launchbar-instance-view>
 <p *ngIf="launchbarItem.showIconLabel" class="launchbar-caption truncate"
-   [style.bottom]="hoverBottom">{{launchbarItem.label}}</p>
+   [style.bottom]="hoverBottom"
+   [style.left]="hoverOffset">{{launchbarItem.label}}</p>
 <div class="mvd-launchbar-icon launchbar-icon-image mvd-launchbar-icon-large" [style.width]="iconSize" [style.height]="iconSize" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)" [title]="launchbarItem.tooltip" [style.background-image]="launchbarItem.image == null ? undefined : launchbarItem.image | cssUrl">
 </div>
 <div class="launchbar-icon-marker" *ngIf="launchbarItem.instanceIds.length > 0"
