--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -38,7 +38,7 @@
             <div class="timeAgo">{{timeSince[i]}}</div>
           </div>
       </div>
-      <hr class="notification-breaker">
+      <hr class="notification-breaker" [style.border-top-color]="popupTextColor+'1c'">
   </div>
 </div>
 
