--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
@@ -11,7 +11,7 @@
 <button class="icon-button" (click)="goForward()" [disabled]="!canGoForward" title="Go Forward">&#8680;</button>
 <button class="icon-button" (click)="refresh()" title="Refresh">&#8634;</button>
 <input type="url" [formControl]="urlControl" [placeholder]="placeholder" (keyup.enter)="navigate()" title="Go">
-<button (click)="navigate()">Go</button>
+<app-bookmark-button [url]="navigation.rawURL$ | async"></app-bookmark-button>
 <div class="proxy" title="Enable/Disable Proxy">
   <label for="proxy">Proxy</label>
   <input name="proxy" id="proxy" type="checkbox" [formControl]="proxyControl">
