--- a/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
@@ -8,7 +8,7 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<app-bookmark *ngFor="let bookmark of bookmarks.bookmarks" [bookmark]="bookmark"></app-bookmark>
+<span [title]="title">{{ bookmark.title }}</span>
 
 <!--
   This program and the accompanying materials are
