--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -149,6 +149,10 @@
   font-size: 12pt;
 }
 
+.zowe-logo {
+  width: 90%;
+  padding-bottom: 20%;
+}
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
