Web Browser App: Make bookmarks work
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
@@ -8,7 +8,9 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<span [title]="title">{{ bookmark.title }}</span>
+<div (click)="navigate()">
+  <span [title]="bookmark.title">{{ bookmark.title }}</span>
+</div>
 
 <!--
   This program and the accompanying materials are
