--- a/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
@@ -8,8 +8,9 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<div (click)="navigate()">
-  <span [title]="bookmark.title">{{ bookmark.title }}</span>
+<div>
+  <span class="title" [title]="bookmark.title" (click)="navigate()">{{ bookmark.title }}</span>
+  <span class="remove" (click)="remove()" title="Remove bookmark" i18n-title="tooltip|Title of 'Remove bookmark' button@@remove-bookmark">&#9447;</span>
 </div>
 
 <!--
