Web Browser App: Refactoring
Rename Bookmarks component to BookmarkBar component

Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/browser/browser.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/browser/browser.component.html
@@ -9,7 +9,7 @@
 -->
 
 <app-address-bar></app-address-bar>
-<app-bookmarks></app-bookmarks>
+<app-bookmark-bar></app-bookmark-bar>
 <app-browser-window></app-browser-window>
 
 <!--
