Changed background/password auth selection
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -48,6 +48,7 @@
   height: 100%;
   top: 0;
   left: 0;
+  background: url(../../../assets/images/background.jpg) no-repeat center/cover;
 }
 
 .login-panel.hidden {
