--- a/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/bookmark/bookmark.component.html
@@ -10,7 +10,7 @@
 
 <div>
   <span class="title" [title]="bookmark.title" (click)="navigate()">{{ bookmark.title }}</span>
-  <span class="remove" (click)="remove()" title="Remove bookmark" i18n-title="tooltip|Title of 'Remove bookmark' button@@remove-bookmark">&#9447;</span>
+  <span class="remove" (click)="remove()" title="Remove bookmark" i18n-title="tooltip|Title of 'Remove bookmark' button@@remove-bookmark">x</span>
 </div>
 
 <!--
