Fix for window button positions. Styling for instance viewer. Fix for instance viewer visibility on events
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
@@ -7,7 +7,9 @@
   
   Copyright Contributors to the Zowe Project.
   -->
-<div class="instance-viewer" [style.bottom]="viewerBottom">
+<div class="instance-viewer" [style.bottom]="viewerBottom"
+     [style.background]="color.launchbarMenuColor"
+     [style.color]="color.launchbarMenuText">
   <div class="all-instances-box">
     <div class="instance-item" (mousedown)="clicked(windowId, launchbarItem)" *ngFor="let windowId of windowManager.getWindowIDs(launchbarItem.plugin); let i = index">
       <div>
