--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
@@ -9,16 +9,16 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-<div class="launchbar-icon-container col-md-4" (mouseleave)="onMouseLeaveInstanceView($event)">
+<div class="launchbar-icon-container col-md-4" #launchbarIconContainer>
   <zowe-launchbar-instance-view class="instance" *ngIf="launchbarItem.showInstanceView"
                                 [theme]="_theme"
                                 [launchbarItem]="launchbarItem"
-                                (mouseenter)="onMouseEnterInstanceView($event)"
-                                (mouseleave)="onMouseLeaveInstanceView($event)"></zowe-launchbar-instance-view>
+                                (mouseenter)="onMouseEnterInstanceView($event)"></zowe-launchbar-instance-view>
 <p *ngIf="launchbarItem.showIconLabel" class="launchbar-caption truncate"
    [style.bottom]="hoverBottom"
    [style.left]="hoverOffset">{{launchbarItem.label}}</p>
-<div class="mvd-launchbar-icon launchbar-icon-image mvd-launchbar-icon-large" [style.width]="iconSize" [style.height]="iconSize" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)" [title]="launchbarItem.tooltip" [style.background-image]="launchbarItem.image == null ? undefined : launchbarItem.image | cssUrl">
+<div class="mvd-launchbar-icon launchbar-icon-image mvd-launchbar-icon-large"
+     [style.width]="iconSize" [style.height]="iconSize" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)" [title]="launchbarItem.tooltip" [style.background-image]="launchbarItem.image == null ? undefined : launchbarItem.image | cssUrl">
 </div>
 <div class="launchbar-icon-marker" *ngIf="launchbarItem.instanceIds.length > 0"
      [style.height]="indicatorSize"
