Centered login via y axis with slight offset for elements
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -55,6 +55,11 @@
   display: none;
 }
 
+.login-group {
+  height: calc(50% + 200px);
+  min-height: 500px;
+}
+
 .login-form {
   margin-top: 20%;
   margin-left: auto;
