Found a cleaner way of doing the same thing
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -32,14 +32,25 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  
 }
 
 .login-overlay > div {
-  background: white;
+  /* background: white;
   overflow-x: hidden;
   height: 100%;
   padding: 20px 50px;
-  overflow: auto;
+  overflow: auto; */
+
+  background: white;
+    overflow-x: hidden;
+    /* height: calc(50% + 0px); */
+    max-height: fit-content;
+    padding: 20px 50px 100px;
+    min-height: 500px;
+    overflow: auto;
+    /* top: 50% !important; */
+    /* margin-top: 50%; */
 }
 
 .login-panel {
@@ -56,8 +67,8 @@
 }
 
 .login-group {
-  height: calc(50% + 200px);
-  min-height: 500px;
+  /* height: calc(50% + 200px) !important;
+  min-height: 500px; */
 }
 
 .login-form {
