--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -42,6 +42,7 @@
       </div>
     </div>
     <div class="launch-menu-search">
+      <i class="launch-menu-search-icon fa fa-search"></i>
       <input class="launch-menu-search-input" type="text" placeholder="{{translation.translate('Search Applications')}}"
              [style.font-size]="menuText"
              [style.color]="color.launchbarMenuText"
