Widen menu, fix margins to support new launchbar look
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -8,12 +8,12 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<div class="launch-widget">
+<div class="launch-widget"
+     [style.background]="color.launchbarColor">
   <div class="mvd-launchbar-icon mvd-launchbar-icon-large launchbar-menu-icon"
        [style.width]="menuIconSize"
        [style.height]="menuIconSize"
        (click)="activeToggle()"></div>
-  <div class="launchbar-separator right"></div>
 </div>
 
 <ng-template [ngIf]="isActive">
