--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
@@ -24,6 +24,7 @@
 .launch-menu-search {
   position:absolute;
   bottom: 5px;
+  left: 10px;
   width: 100%;
 }
 
@@ -67,11 +68,10 @@
 
 .launch-widget {
   height: 100%;
+  border-radius: 7px;
   text-align: center;
   display: inline-block;
   position: absolute;
-  padding-left: 5px;
-  padding-right: 10px;
   left: 0;
   bottom: 0;
   z-index: 7;
@@ -118,12 +118,7 @@
   left: 5px;
   border-radius: 10px;
   background: #dde8f1;
-  padding: 5px 10px 0px 10px;
-}
-
-
-.launchbar-separator-hor {
-  color: #36617a;
+  padding: 5px 10px 0px 5px;
 }
 
 .caret-up {
