--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -24,6 +24,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
+  border-radius: 7px;
   width: fit-content;
   min-width: 175px; /* fit-content seems to fail at times with Safari, min-width here as a safety */
   height: 100%;
@@ -99,22 +100,6 @@
 
 .launchbar-username {
   text-align: center;
-}
-
-.launchbar-separator {
-  position: absolute;
-  bottom: 0;
-  height: 60px;
-  width: 5px;
-  background-color: #36617a;
-}
-
-.launchbar-separator.right {
-  right: 0;
-}
-
-.launchbar-separator.left {
-  left: 0;
 }
 
 .notifications {
