--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -9,19 +9,19 @@
 -->
 
 <div class="launchbar-user-popup" [class.hidden]="!popupVisible"
-     [style.background]="popupBackground"
+     [style.background]="color.launchbarMenuColor"
      [style.bottom]="popupBottom"
-     [style.color]="popupTextColor">
+     [style.color]="color.launchbarMenuText">
   <h5 class="launchbar-username">{{getUsername()}}</h5>
   <button #logoutbutton class="btn btn-primary launchbar-button" (click)="logout()"
     i18n="signout button|Title of Sign out button@@signout-button-title">Log out</button>
-  <h6 class="launchbar-plugin-version" [style.color]="popupTextColor">{{getPluginVersion()}}</h6>
+  <h6 class="launchbar-plugin-version" [style.color]="color.launchbarMenuText">{{getPluginVersion()}}</h6>
 </div>
 
 <div #notificationarea [hidden]="!notificationsVisible" class='notifications'
      [style.bottom]="popupBottom"
-     [style.background]="popupBackground"
-     [style.color]="popupTextColor">
+     [style.background]="color.launchbarMenuColor"
+     [style.color]="color.launchbarMenuText">
   <div [hidden]="notifications.length > 0" class="no-notifications">No Notifications</div>
   <div class="notification-item" *ngFor="let item of notifications; let i = index" [attr.data-index]="i">
       <div class="outer-container" (click)="focusApplication(i)">
@@ -38,12 +38,13 @@
             <div class="timeAgo">{{timeSince[i]}}</div>
           </div>
       </div>
-      <hr class="notification-breaker" [style.border-top-color]="popupTextColor+'1c'">
+      <hr class="notification-breaker" [style.border-top-color]="color.launchbarMenuText+'1c'">
   </div>
 </div>
 
-<div class="widget-area" [style.padding-top]="widgetOffset" [style.min-width]="areaSize">
-  <div class="launchbar-separator left"></div>
+<div class="widget-area" [style.padding-top]="widgetOffset"
+     [style.min-width]="areaSize"
+     [style.background]="color.launchbarColor">
   <div class="clock two-row" *ngIf="clockTwoRow" [style.font-size]="fontSize" [style.padding-top]="clockOffset">
     <span>{{date | date:'shortTime'}}</span>
     <br>
