Dynamic border radius
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -9,7 +9,8 @@
 -->
 
 <div class="launch-widget"
-     [style.background]="color.launchbarColor">
+     [style.background]="color.launchbarColor"
+     [style.border-radius]="borderRadius">
   <div class="mvd-launchbar-icon mvd-launchbar-icon-large launchbar-menu-icon"
        [style.width]="menuIconSize"
        [style.height]="menuIconSize"
