--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -44,7 +44,8 @@
 
 <div class="widget-area" [style.padding-top]="widgetOffset"
      [style.min-width]="areaSize"
-     [style.background]="color.launchbarColor">
+     [style.background]="color.launchbarColor"
+     [style.border-radius]="borderRadius">
   <div class="clock two-row" *ngIf="clockTwoRow" [style.font-size]="fontSize" [style.padding-top]="clockOffset">
     <span>{{date | date:'shortTime'}}</span>
     <br>
