--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
@@ -17,7 +17,8 @@
   
   <div class="applist row" [style.margin]="applistMargin"
        [style.background]="_theme.color.launchbarColor"
-       [style.padding-left]="applistPadding">
+       [style.padding-left]="applistPadding"
+       [style.border-radius]="applistPadding">
     <rs-com-launchbar-icon *ngFor="let item of pinnedItems" [launchbarItem]="item" [theme]="_theme" (contextmenu)="onRightClick($event, item)"
     (mousedown)="onMouseDown($event, item)" (mousemove)="onMouseMove($event, item)">
     </rs-com-launchbar-icon>
