Fix for maximize paddingg
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
@@ -38,7 +38,7 @@
 
   [style.background-color]="hasFocus() ? color.windowColorActive : color.windowColorInactive"
   [style.border-color]="hasFocus() ? color.windowColorActive : color.windowColorInactive"
-  [style.border-width]="borderSize"
+  [style.border-width]="isMaximized() ? '0px' : borderSize"
   class="window">
 
   <div class="border-box-sizing">
