Small miscellaneous SonarCloud fixes
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/context-menu/context-menu.component.html
+++ b/virtual-desktop/src/app/context-menu/context-menu.component.html
@@ -40,6 +40,7 @@
                 class="icon"
                 [src]="menuItem.icon ? this.generateIcon(menuItem.icon) : null"
                 [class.hide-icon]="!menuItem.icon"
+                alt=""
               >
               <div>{{menuItem.text}}</div>
             </div>
@@ -64,6 +65,7 @@
             [class.propagateChildLeft]="this._propagateChildLeft"
           >
             <com-rs-mvd-context-menu
+              class='mvd-context-menu'
               [xPos]="-2"
               [yPos]="-5"
               [parentY]="this.newY+(i*this._itemHeight)"
@@ -89,6 +91,7 @@
                 [src]="menuItem.icon ? this.generateIcon(menuItem.icon) : null"
                 [class.hide-icon]="!menuItem.icon"
                 [class.propagateChildLeft]="this._propagateChildLeft"
+                alt=""
               >
               <div>{{menuItem.text}}</div>
             </div>
