--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -17,7 +17,7 @@
   <div class="launch-widget-popup">
     <div style="cursor: pointer" class="refresh-plugins" (click)="refresh()">
       Refresh applications
-      <i style="padding: 5px" class="fa fa-refresh" (click)="refresh()"></i>
+      <em style="padding: 5px" class="fa fa-refresh" (click)="refresh()"></em>
     </div>
     <div style="margin: 20px"></div>
     <div class="launch-menu-scroller">
