Re-skinned right click menu + minor refactor
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
@@ -34,6 +34,10 @@
   background-image: url('../../../../../../system-apps/system-settings-preferences/webClient/src/assets/language_icon.png');
 }
 
+.panel-item-personalization{
+  background-image: url('../../../../../../system-apps/system-settings-preferences/webClient/src/assets/personalization.png');
+}
+
 .personalization-panel-ul {
   height: 100%;
   width: 100%;
