--- a/virtual-desktop/src/app/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/context-menu/context-menu.component.css
@@ -23,10 +23,13 @@ li.disabled {
   z-index: 20000;
   min-width: 180px;
   width: auto;
+  -webkit-box-shadow: 3px 3px 2px 1px #0000004a;
+  -moz-box-shadow: 3px 3px 2px 1px #0000004a;
+  box-shadow: 3px 3px 2px 1px #0000004a;
 }
 
 .context-menu .menu-item.active {
-  background-color:#a6a6a6;
+  background-color:#808080;
 }
 
 .context-menu .menu-item.top {
@@ -46,7 +49,7 @@ li.disabled {
 }
 
 .context-menu .menu-item {
-  background-color:#f6f0f0;
+  background-color:#272435;
   width: 100%;
   height: auto;
   padding:3px;
@@ -54,7 +57,7 @@ li.disabled {
   font-size: 14px;
   font-weight: 400;
   white-space:nowrap;
-  color:#404040;
+  color:#dddee0;
   border-style: solid;
   border-width: 0 1px 1px 1px;
   border-color: #ccc;
