Web Browser App: Minor fix Remove mistakenly added id
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
@@ -14,7 +14,7 @@
 <app-bookmark-button [url]="navigation.rawURL$ | async"></app-bookmark-button>
 <div class="proxy" title="Enable/Disable Proxy" i18n-title="tooltip|Title of 'Enable/Disable Proxy' checkbox@@enable-disable-proxy">
   <label for="proxy" i18n="label|Title of 'Proxy' checkbox@@proxy">Proxy</label>
-  <input name="proxy" id="proxy" type="checkbox" [formControl]="proxyControl">
+  <input name="proxy" type="checkbox" [formControl]="proxyControl">
 </div>
 <!--
   This program and the accompanying materials are
